--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.2",
     "nodemon": "^3.1.9"
